--- a/assignment/dr_john.html
+++ b/assignment/dr_john.html
@@ -5,48 +5,56 @@
     <title>Dr.John</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body id="Doctor">
-
-    <div class="doctor_div" id="doctor_left">
-        <div class="doctor_left_1">
-            <a href="index.html">
-                <div class="appointment_logo">
-                    <div class="loca_phone">
-                        <div><img src="images/appointment_logo.png"></div>
-                        <div>
-                            <h1>Medical</h1>
+<body id="Doctor" class="body_color">
+    <div class="container_index">
+        <div class="doctor_div" id="doctor_left">
+            <div class="doctor_left_1">
+                <a href="index.html">
+                    <div class="appointment_logo">
+                        <div class="loca_phone">
+                            <div><img src="images/appointment_logo.png"></div>
+                            <div>
+                                <h1>Medical</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
+            <div><img id="doctor_img" src="images/doctor.png"></div>
         </div>
-        <div><img id="doctor_img" src="images/doctor.png"></div>
+        <div class="doctor_div" id="doctor_center">
+            <h1 id="john">Dr.John</h1>
+            <div>
+                <h2>Specialist Surgeon</h2>
+                <p>MBBS (Hons) MPhil FRACS</p>
+            </div>
+            <div>
+                <h2>Completed Advanced Surgical</h2>
+                <p>In Queensland (2008)</p>
+            </div>
+            <div>
+                <h2>Office Hour</h2>
+                <p>Monday - Friday 0830-1500<br>
+                    Saturday 1000-1500</p>
+            </div>
+            <div>
+                <h2>“Our purpose is to listen to each patient, help them understand their options and deliver the best
+                    care possible.”</h2>
+            </div>
+        </div>
+        <div class="doctor_div" id="doctor_map">
+            <img src="images/Queensland.png">
+        </div>
     </div>
-    <div class="doctor_div" id="doctor_center">
-        <h1 id="john">Dr.John</h1>
-        <div>
-            <h2>Specialist Surgeon</h2>
-            <p>MBBS (Hons) MPhil FRACS</p>
-        </div>
-        <div>
-            <h2>Completed Advanced Surgical</h2>
-            <p>In Queensland (2008)</p>
-        </div>
-        <div>
-            <h2>Office Hour</h2>
-            <p>Monday - Friday 0830-1500<br>
-                Saturday 1000-1500</p>
-        </div>
-        <div>
-            <h2>“Our purpose is to listen to each patient, help them understand their options and deliver the best care possible.”</h2>
-        </div>
-    </div>
-    <div class="doctor_div" id="doctor_map">
-        <img src="images/Queensland.png">
-    </div>
+
 
 </body>
 
