--- a/assignment/facility.html
+++ b/assignment/facility.html
@@ -5,54 +5,90 @@
     <title>Facility</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="appointment" id="facility_bg">
-    <div class="sign_top">
-        <div class="sign_top_logo">
-            <a href="index.html">
-                <div class="appointment_logo">
-                    <div class="loca_phone">
-                        <div><img src="images/appointment_logo.png"></div>
-                        <div>
-                            <h1>Medical</h1>
-                        </div>
+<body class="appointment body_color" id="facility_bg">
+    <div class="container_index">
+        <nav class="navbar navbar-expand-md" id="menu">
+            <div class="container-fluid">
+                <nav class="navbar">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
+                            <p class="d-inline-block ">Medical</p>
+                        </a>
                     </div>
-                </div>
-            </a>
-        </div>
+                </nav>
+                <nav class="navbar">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="facility.html">Our Facility</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="appointment.html">Appointment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="contact.html">Contact Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="sign_up.html"><img src="images/icon.png"
+                                            width="30" height="30"></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </nav>
+            </div>
+        </nav>
+
         <h1 class="topic">Our Facility</h1>
-    </div>
-    <div class="facility">
-        <div class="facility_pic">
-            <img src="images/facility1.png">
+
+        <div class="facility">
+            <div class="facility_pic">
+                <img src="images/facility1.png">
+            </div>
+            <div class="facility_word">
+                <h1 class="facility_h1">Room Size</h1>
+                <h3 class="facility_h3">Require more staff, for every single room at least 600 square feet.</h3>
+            </div>
         </div>
-        <div class="facility_word">
-            <h1 class="facility_h1">Room Size</h1>
-            <h3 class="facility_h3">Require more staff, and are recommended to be at least 600 square feet.</h3>
+
+        <div class="facility">
+            <div class="facility_pic">
+                <img src="images/facility2.jpg">
+            </div>
+            <div class="facility_word">
+                <h1 class="facility_h1">Waiting Room</h1>
+                <h3 class="facility_h3">Seating comfortable. Arms on chairs easier for patients to sit down and get up;
+                    chair sizes should vary in order to accommodate bariatric users.</h3>
+            </div>
+        </div>
+
+        <div class="facility">
+            <div class="facility_pic">
+                <img src="images/facility3.jpg">
+            </div>
+            <div class="facility_word">
+                <h1 class="facility_h1">Location</h1>
+                <h3 class="facility_h3">There are many branches in Kuala Lumpur and easily accessible.</h3>
+            </div>
         </div>
     </div>
 
-    <div class="facility">
-        <div class="facility_pic">
-            <img src="images/facility2.jpg">
-        </div>
-        <div class="facility_word">
-            <h1 class="facility_h1">Waiting Room</h1>
-            <h3 class="facility_h3">Seating comfortable. Arms on chairs easier for patients to sit down and get up; chair sizes should vary in order to accommodate bariatric users.</h3>
-        </div>
-    </div>
-
-    <div class="facility">
-        <div class="facility_pic">
-            <img src="images/facility3.jpg">
-        </div>
-        <div class="facility_word">
-            <h1 class="facility_h1">Location</h1>
-            <h3 class="facility_h3">There are many branches in Kuala Lumpur and easily accessible.</h3>
-        </div>
-    </div>
 
 </body>
 
