add link to main page

--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
                     </u1>
                 </div>
             </div>
+            <div class="dropdown">
+                <p class="btn btn-light btn-xl">Week10!</p>
+                <div class="dropdown-content">
+                    <u1>
+                        <li><a  href="week10/index.html">demo</a></li>
+                        <li><a  href="week10/exercise_1.html">Exercise 1</a></li>
+                    </u1>
+                </div>
+            </div>
 
             
         </div>
