--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -56,6 +56,42 @@
         </nav>
         <h1 class="topic">Contact Us</h1>
 
+        <div class="input_container">
+            <div class="input_box" id="input_box_20"></div>
+            <div id="sign_up_input_box">
+                <form action="thank_you.html">
+                    <div class="sign_up_box">
+                        <div class="sign_up_box2">
+                            <h2>Name *</h2>
+                            <input type="text" name="name" class="sign_up_box3" required>
+                        </div>
+                        <div class="sign_up_box2">
+                            <h2>Phone number</h2>
+                            <input type="text" name="phone" placeholder="+12 345 678 90" class="sign_up_box3">
+                        </div>
+                    </div>
+                    <div class="contact_email">
+                        <h2>Email </h2>
+                        <input type="text" name="email" placeholder="example@gmail.com" class="sign_up_box3">
+                    </div>
+                    <div class="contact_email">
+                        <h2>Message</h2>
+                        <textarea name="Message" placeholder="Write here..." class="sign_up_box3"></textarea>
+
+                    </div>
+                    
+                    <br><br>
+                    <div id="sign_up_button">
+                        <a type="submit" class="button_appointment" href="thank_you.html">Submint</a>
+                    </div>
+
+                </form>
+            </div>
+
+        
+        </div>
+
+
     </div>
 
 
