--- a/assignment/dr_john.html
+++ b/assignment/dr_john.html
@@ -15,44 +15,75 @@
 
 <body id="Doctor" class="body_color">
     <div class="container_index">
-        <div class="doctor_div" id="doctor_left">
-            <div class="doctor_left_1">
-                <a href="index.html">
-                    <div class="appointment_logo">
-                        <div class="loca_phone">
-                            <div><img src="images/appointment_logo.png"></div>
-                            <div>
-                                <h1>Medical</h1>
-                            </div>
-                        </div>
+        <nav class="navbar navbar-expand-md" id="menu">
+            <div class="container-fluid">
+                <nav class="navbar">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
+                            <p class="d-inline-block ">Medical</p>
+                        </a>
                     </div>
-                </a>
+                </nav>
+                <nav class="navbar">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="facility.html">Our Facility</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="appointment.html">Appointment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="contact.html">Contact Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="d-flex navbar-brand" href="sign_up.html"><img src="images/icon.png"
+                                            width="30" height="30"></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </nav>
             </div>
-            <div><img id="doctor_img" src="images/doctor.png"></div>
+        </nav>
+        <h1 class="topic">Dr.John</h1>
+        <div id="Doctor_box">
+            <div class="doctor_div" id="doctor_left">
+                <img id="doctor_img" src="images/doctor.png">
+            </div>
+            <div class="doctor_div" id="doctor_center">
+                <div>
+                    <h1>Specialist Surgeon</h1>
+                    <h3>MBBS (Hons) MPhil FRACS</h3>
+                </div>
+                <div>
+                    <h1>Completed Advanced Surgical</h1>
+                    <h3>In Queensland (2008)</h3>
+                </div>
+                <div>
+                    <h1>Office Hour</h1>
+                    <h3>Monday - Friday 0830-1500<br>
+                        Saturday 1000-1500</h3>
+                </div>
+                <div>
+                    <h1>“Our purpose is to listen to each patient, help them understand their options and deliver the
+                        best
+                        care possible.”</h1>
+                </div>
+            </div>
+            <div class="doctor_div" id="doctor_map">
+                <img src="images/Queensland.png">
+            </div>
         </div>
-        <div class="doctor_div" id="doctor_center">
-            <h1 id="john">Dr.John</h1>
-            <div>
-                <h2>Specialist Surgeon</h2>
-                <p>MBBS (Hons) MPhil FRACS</p>
-            </div>
-            <div>
-                <h2>Completed Advanced Surgical</h2>
-                <p>In Queensland (2008)</p>
-            </div>
-            <div>
-                <h2>Office Hour</h2>
-                <p>Monday - Friday 0830-1500<br>
-                    Saturday 1000-1500</p>
-            </div>
-            <div>
-                <h2>“Our purpose is to listen to each patient, help them understand their options and deliver the best
-                    care possible.”</h2>
-            </div>
-        </div>
-        <div class="doctor_div" id="doctor_map">
-            <img src="images/Queensland.png">
-        </div>
+
     </div>
 
 
