--- a/assignment/index.html
+++ b/assignment/index.html
@@ -54,7 +54,7 @@
                                 </li>
                             </ul>
                         </div>
-                        
+
                     </div>
                 </nav>
             </div>
@@ -94,26 +94,29 @@
             <h1>Our Doctors</h1>
             <div class="doctors">
                 <div class="doctors1">
-                    <a href="dr_john.html"><img src="images/doctor.png"></a>
-                    <h3>Dr.John</h3>
-                    <div class="info">
-                        <div>
+                    <div>
+                        <a href="dr_john.html"><img src="images/doctor.png"></a>
+                        <h3>Dr.John</h3>
+                        <div class="info">
                             <div>
-                                <img src="images/good.png">
+                                <div>
+                                    <img src="images/good.png">
+                                </div>
+                                <div>
+                                    <p>95%</p>
+                                </div>
                             </div>
                             <div>
-                                <p>95%</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img src="images/work.png">
-                            </div>
-                            <div>
-                                <p>15 Years</p>
+                                <div>
+                                    <img src="images/work.png">
+                                </div>
+                                <div>
+                                    <p>15 Years</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <a href="appointment.html" class="button">Create Appointment Now!</a>
                 </div>
                 <div class="doctors1">
@@ -246,7 +249,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/call.png"></div>
                                 <div>
-                                    <p>+98 765 432 10</p>
+                                    <p class="margin_change">+98 765 432 10</p>
                                 </div>
                             </div>
                         </a>
@@ -254,7 +257,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/mail.png"></div>
                                 <div>
-                                    <p>hello@luxi.com</p>
+                                    <p class="margin_change">hello@luxi.com</p>
                                 </div>
                             </div>
                         </a>
@@ -265,7 +268,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/pin.png"></div>
                                 <div>
-                                    <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
                                 </div>
                             </div>
                         </a>
@@ -276,7 +279,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/call.png"></div>
                                 <div>
-                                    <p>+98 765 432 10</p>
+                                    <p class="margin_change">+98 765 432 10</p>
                                 </div>
                             </div>
                         </a>
@@ -284,7 +287,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/mail.png"></div>
                                 <div>
-                                    <p>hello@luxi.com</p>
+                                    <p class="margin_change">hello@luxi.com</p>
                                 </div>
                             </div>
                         </a>
@@ -295,7 +298,7 @@
                             <div class="loca_phone">
                                 <div><img src="images/pin.png"></div>
                                 <div id="last">
-                                    <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
                                 </div>
                             </div>
                         </a>
