--- a/assignment2/H1N1_menu.html
+++ b/assignment2/H1N1_menu.html
@@ -234,10 +234,6 @@
                                 of 2009 pandemic influenza A H1N1 virus circulation: a modelling study
                             </p>
                             <br><br><br>
-                            <a href="https://www.thelancet.com/journals/laninf/article/PIIS1473-3099%2812%2970121-4/fulltext"
-                                target="_blank"><button type="button"
-                                    class="button-1 p-small position-absolute bottom-1 end-0 bg-color-orange">Read
-                                    More</button></a>
 
                         </div>
                         <div class="col-xxl-6 text-center">
@@ -248,6 +244,8 @@
             </div>
         </section><br><br>
 
+
+        <!-- Button -->
         <div class="text-center">
             <a class="cta-btn button1 p-small text-center nondecorate" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">Read More</a>
